[build-system]
requires = [
    "setuptools>=42,<60; python_version < '3.7'",
    "setuptools>=64; python_version >= '3.7'",
    "wheel<0.38; python_version < '3.7'",
    "wheel; python_version >= '3.7'",
    "numpy<1.20; python_version < '3.7'",
    "numpy<2; python_version >= '3.7'",
    "pybind11>=2.5.0,<2.11.0"
]
build-backend = "setuptools.build_meta"
